--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
-## Documentation: http://docs.travis-ci.com/user/languages/julia/
+# Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 os:
-  - linux
-  - osx
+    - linux
 julia:
-  - nightly
+    - 0.7
+    - 1.0
+    - nightly
+matrix:
+    allow_failures:
+        - julia: nightly
 notifications:
-  email: false
-git:
-  depth: 99999999
+    email: false
+# uncomment the following lines to override the default test script
+#script:
+#    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+#    - julia -e 'Pkg.clone(pwd()); Pkg.build("Capstan"); Pkg.test("Capstan"; coverage=true)'
 after_success:
-  # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("Capstan")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+    # push coverage results to Coveralls
+    - julia -e 'cd(Pkg.dir("Capstan")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+    - julia -e 'Pkg.add("Documenter")'
+    - julia -e 'cd(Pkg.dir("Capstan")); include(joinpath("docs", "make.jl"))'
